# build-and-deploy-webdev-asap

./: .gitignore  .mcp.json  .tmp-autonomous-prompt.txt  2026-04-13_LISTA_DE_PRECIOS.xlsx  BACKUP_PRODUCTOS.txt  CLAUDE.md  GUIA-CLAUDE-CODE-SKILLS.md  HANDOVER.md  Supabase Snippet List All Auth Users.csv  afiche_tufarmacia (1).html  context.md  continue-prompt.txt  formateo.md  golan_info.md  launch-continue.ps1  migration_barcode_catalog.sql  migration_fix_stock_movements_reasons.sql  migration_product_barcodes.sql  migration_push_subscriptions.sql  migration_ventas_historicas.sql  respaldoPrecios.csv  vercel.json
.claude/: settings.json  settings.local.json
.serena/: project.yml
claude-config-backup/: CLAUDE.template.md  settings.json
dataconnect/: dataconnect.yaml  seed_data.gql
pharmacy-ecommerce/: .env.example  .env.production.example  .env.railway.template  .gitignore  .mcp.json  .railwayignore  2026-01-08 REPORTE STOCK.xlsx  2026-01-19_LISTA_DE_PRECIOS.xlsx  ACTUALIZAR-RAILWAY.md  AGREGAR-VARIABLES-VERCEL.md  CHECKLIST-FINAL.md  CLAUDE_CONTEXT omarchy.md  CLAUDE_CONTEXT.md  DEPLOY-COMMANDS.md  DEPLOY-EN-30-MIN.md  DEPLOY-FRONTEND.md  DEPLOY-VERCEL-AHORA.md  DEPLOY-VERCEL-SIMPLE.md  DEPLOY.md  DEPLOYMENT-COMPLETO.md  DEPLOYMENT-EXITOSO.md  EJECUTAR-MIGRACIONES-AHORA.md  ESTADO-ACTUAL.md  ESTADO-PROBLEMA-PAGO.md  FIX-RAILWAY-DASHBOARD.md  INDEX-DEPLOYMENT.md  INSTRUCCIONES-FINALES-MCP.md  LISTO-PARA-DEPLOY.md  MCP-CONFIGURACION-COMPLETA.md  MCP-DOCKER-INSTALADO.md  (+38 more)
pharmacy-ecommerce/apps/auth-service/: Cargo.toml  Dockerfile
pharmacy-ecommerce/apps/auth-service/src/: config.rs  main.rs
pharmacy-ecommerce/apps/auth-service/src/handlers/: login.rs  me.rs  mod.rs  register.rs
pharmacy-ecommerce/apps/auth-service/src/middleware/: jwt.rs
pharmacy-ecommerce/apps/auth-service/src/models/: user.rs
pharmacy-ecommerce/apps/order-service/: Cargo.toml  Dockerfile
pharmacy-ecommerce/apps/order-service/src/: config.rs  main.rs
pharmacy-ecommerce/apps/order-service/src/handlers/: cart.rs  checkout.rs  mod.rs  orders.rs  webhook.rs
pharmacy-ecommerce/apps/order-service/src/middleware/: jwt.rs
pharmacy-ecommerce/apps/order-service/src/models/: cart.rs  mod.rs  order.rs
pharmacy-ecommerce/apps/order-service/src/services/: mercadopago.rs  mod.rs  stripe.rs
pharmacy-ecommerce/apps/product-service/: Cargo.toml  Dockerfile
pharmacy-ecommerce/apps/product-service/src/: config.rs  main.rs
pharmacy-ecommerce/apps/product-service/src/handlers/: categories.rs  mod.rs  products.rs
pharmacy-ecommerce/apps/product-service/src/middleware/: jwt.rs
pharmacy-ecommerce/apps/product-service/src/models/: category.rs  mod.rs  product.rs
(+526 files in other folders)
